--- a/.env_master
+++ b/.env_master
@@ -325,8 +325,7 @@
 #cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
 #cb_reticulum:NEXUS_BACKEND_AUTOSTART=False
 #cb_reticulum:#NEXUS_COMMAND=rnsd
-#cb_reticulum:#NEXUS_COMMAND=nomadnet_demon
-#cb_reticulum:NEXUS_COMMAND=nomadnet
+#cb_reticulum:NEXUS_COMMAND=nomadnet_demon
 
 # --------------------------------------------------------
 # 'cb_home' constant-beta <home>[home]:[delta]
