--- a/.env_master
+++ b/.env_master
@@ -312,7 +312,7 @@
 # --------------------------------------------------------
 #cb_reticulum:NEXUS_COMPOSE_HOME=~/cb.reticulum
 #cb_reticulum:RNS_CONFIG=/home/bsb/.reticulum/cb_reticulum
-#cb_reticulum:RNS_AUTOSTART=True
+#cb_reticulum:RNS_AUTOSTART=False
 #cb_reticulum:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_reticulum
 #cb_reticulum:NOMADNET_AUTOSTART=False
 #cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
