--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -34,8 +34,8 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-#    id_callsign = DD8SB-5
-#    id_interval = 600
+    id_callsign = DD8SB
+    id_interval = 60
     network_name = myTwinCluster
     passphrase = myTwinCluster
     flow_control = False
@@ -50,8 +50,8 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-#    id_callsign = DD8SB-5
-#    id_interval = 600
+    id_callsign = DD8SB
+    id_interval = 60
     network_name = myTwinCluster
     passphrase = myTwinCluster
     flow_control = False
