--- a/.env_master
+++ b/.env_master
@@ -71,6 +71,10 @@
 #default:#NOMADNET_AUTOSTART=False
 #default:
 #default:#################################################################
+#default:# Default Nginx configuration
+#default:#NGINX_AUTOSTART=False
+#default:
+#default:#################################################################
 #default:# Default Django SuperUser settings
 #default:#DJANGO_SUPERUSER_USERNAME=admin
 #default:#DJANGO_SUPERUSER_PASSWORD=admin
@@ -154,6 +158,12 @@
 #paulchen:COMPOSE_PROFILES=auto-update
 #paulchen:WATCHTOWER_POLL_INTERVAL=86400
 #paulchen:NEXUS_WATCHTOWER=nexus-watchtower
+#paulchen:NEXUS_COMPOSE_HOME=~/nexus
+#paulchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#paulchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#paulchen:NEXUS_CONTAINER=nexus-paulchen
+#paulchen:NEXUS_CONTAINER_ALIAS=nexus-paulchen
+#paulchen:NEXUS_NETWORK=nexus-paulchen_net
 #paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
 #paulchen:DIREWOLF_AUTOSTART=False
 #paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
@@ -167,12 +177,7 @@
 #paulchen:RNS_AUTOSTART=False
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
 #paulchen:NOMADNET_AUTOSTART=True
-#paulchen:NEXUS_COMPOSE_HOME=~/nexus
-#paulchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#paulchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#paulchen:NEXUS_CONTAINER=nexus-paulchen
-#paulchen:NEXUS_CONTAINER_ALIAS=nexus-paulchen
-#paulchen:NEXUS_NETWORK=nexus-paulchen_net
+#paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home"}
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
@@ -189,6 +194,11 @@
 #karlchen:WATCHTOWER_POLL_INTERVAL=86400
 #karlchen:NEXUS_WATCHTOWER=nexus-watchtower
 #karlchen:NEXUS_COMPOSE_HOME=~/nexus
+#karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#karlchen:NEXUS_CONTAINER=nexus-karlchen
+#karlchen:NEXUS_CONTAINER_ALIAS=nexus-karlchen
+#karlchen:NEXUS_NETWORK=nexus-karlchen-net
 #karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
 #karlchen:DIREWOLF_AUTOSTART=False
 #karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
@@ -202,11 +212,7 @@
 #karlchen:RNS_AUTOSTART=False
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
 #karlchen:NOMADNET_AUTOSTART=True
-#karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#karlchen:NEXUS_CONTAINER=nexus-karlchen
-#karlchen:NEXUS_CONTAINER_ALIAS=nexus-karlchen
-#karlchen:NEXUS_NETWORK=nexus-karlchen-net
+#karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
@@ -222,6 +228,7 @@
 #orangepi:COMPOSE_PROFILES=auto-update
 #orangepi:WATCHTOWER_POLL_INTERVAL=86400
 #orangepi:NEXUS_WATCHTOWER=nexus-watchtower
+#orangepi:NGINX_AUTOSTART=True
 #orangepi:NEXUS_COMPOSE_HOME=~/nexus
 #orangepi:DIREWOLF_CONFIG=/home/bsb/.direwolf/orangepi
 #orangepi:DIREWOLF_AUTOSTART=False
@@ -252,6 +259,7 @@
 #radiobox:COMPOSE_PROFILES=auto-update
 #radiobox:WATCHTOWER_POLL_INTERVAL=86400
 #radiobox:NEXUS_WATCHTOWER=nexus-watchtower
+#radiobox:NGINX_AUTOSTART=True
 #radiobox:NEXUS_COMPOSE_HOME=~/nexus
 #radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
 #radiobox:DIREWOLF_AUTOSTART=False
@@ -332,15 +340,16 @@
 # bash nexus_pull.sh cb_home
 # --------------------------------------------------------
 #cb_home:NEXUS_COMPOSE_HOME=~/cb.nexus-home
-#cb_home:RNS_CONFIG=/home/bsb/.reticulum/cb_home
-#cb_home:RNS_AUTOSTART=False
-#cb_home:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_home
-#cb_home:NOMADNET_AUTOSTART=False
 #cb_home:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_home:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_home:NEXUS_CONTAINER=nexus-home
 #cb_home:NEXUS_CONTAINER_ALIAS=nexus-home
 #cb_home:NEXUS_NETWORK=nexus-home-net
+#cb_home:RNS_CONFIG=/home/bsb/.reticulum/cb_home
+#cb_home:RNS_AUTOSTART=False
+#cb_home:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_home
+#cb_home:NOMADNET_AUTOSTART=False
+#cb_home:NGINX_AUTOSTART=True
 #cb_home:NEXUS_PORT_RNSAPI=4251
 #cb_home:NEXUS_PORT_WEB=127.0.0.1:4381
 #cb_home:NEXUS_PORT_JSONAPI=127.0.0.1:4341
@@ -355,10 +364,6 @@
 # bash nexus_pull.sh cb_delta
 # --------------------------------------------------------
 #cb_delta:NEXUS_COMPOSE_HOME=~/cb.nexus-delta
-#cb_delta:RNS_CONFIG=/home/bsb/.reticulum/cb_delta
-#cb_delta:RNS_AUTOSTART=False
-#cb_delta:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_delta
-#cb_delta:NOMADNET_AUTOSTART=False
 #cb_delta:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_delta:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_delta:NEXUS_CONTAINER=nexus-delta
@@ -367,6 +372,10 @@
 #cb_delta:NEXUS_PORT_RNSAPI=4252
 #cb_delta:NEXUS_PORT_WEB=127.0.0.1:4382
 #cb_delta:NEXUS_PORT_JSONAPI=127.0.0.1:4342
+#cb_delta:RNS_CONFIG=/home/bsb/.reticulum/cb_delta
+#cb_delta:RNS_AUTOSTART=False
+#cb_delta:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_delta
+#cb_delta:NOMADNET_AUTOSTART=False
 #cb_delta:NEXUS_ASPECT=delta
 #cb_delta:NEXUS_ROLE={"cluster":"delta"}
 #cb_delta:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home"}]
@@ -381,10 +390,6 @@
 #cb_hub:WATCHTOWER_POLL_INTERVAL=86400
 #cb_hub:NEXUS_WATCHTOWER=nexus-watchtower
 #cb_hub:NEXUS_COMPOSE_HOME=~/cb.nexus-hub
-#cb_hub:RNS_CONFIG=/home/bsb/.reticulum/cb_hub
-#cb_hub:RNS_AUTOSTART=False
-#cb_hub:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_hub
-#cb_hub:NOMADNET_AUTOSTART=False
 #cb_hub:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_hub:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_hub:NEXUS_CONTAINER=nexus-hub
@@ -393,6 +398,10 @@
 #cb_hub:NEXUS_PORT_RNSAPI=4253
 #cb_hub:NEXUS_PORT_WEB=127.0.0.1:4383
 #cb_hub:NEXUS_PORT_JSONAPI=127.0.0.1:4343
+#cb_hub:RNS_CONFIG=/home/bsb/.reticulum/cb_hub
+#cb_hub:RNS_AUTOSTART=False
+#cb_hub:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_hub
+#cb_hub:NOMADNET_AUTOSTART=False
 #cb_hub:NEXUS_ASPECT=delta
 #cb_hub:NEXUS_ROLE={"cluster":"delta","gate":"lora.delta"}
 #cb_hub:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
@@ -404,10 +413,6 @@
 # bash nexus_pull.sh cb_dev
 # --------------------------------------------------------
 #cb_dev:NEXUS_COMPOSE_HOME=~/cb.nexus-dev
-#cb_dev:RNS_CONFIG=/home/bsb/.reticulum/cb_dev
-#cb_dev:RNS_AUTOSTART=False
-#cb_dev:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_dev
-#cb_dev:NOMADNET_AUTOSTART=False
 #cb_dev:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_dev:NEXUS_CONTAINER=nexus-dev
@@ -416,6 +421,10 @@
 #cb_dev:NEXUS_PORT_RNSAPI=4254
 #cb_dev:NEXUS_PORT_WEB=127.0.0.1:4384
 #cb_dev:NEXUS_PORT_JSONAPI=127.0.0.1:4344
+#cb_dev:RNS_CONFIG=/home/bsb/.reticulum/cb_dev
+#cb_dev:RNS_AUTOSTART=False
+#cb_dev:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_dev
+#cb_dev:NOMADNET_AUTOSTART=False
 #cb_dev:NEXUS_ASPECT=dev
 #cb_dev:NEXUS_ROLE={"cluster":"dev"}
 #cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
@@ -427,11 +436,6 @@
 # bash nexus_pull.sh cb_cockpit
 # --------------------------------------------------------
 #cb_cockpit:NEXUS_COMPOSE_HOME=~/cb.nexus-cockpit
-#cb_cockpit:RNS_CONFIG=/home/bsb/.reticulum/cb_cockpit
-#cb_cockpit:RNS_AUTOSTART=False
-#cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
-#cb_cockpit:NOMADNET_AUTOSTART=False
-#cb_cockpit:DJANGO_LOG_LEVEL=debug
 #cb_cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_cockpit:NEXUS_CONTAINER=nexus-cockpit
@@ -440,6 +444,12 @@
 #cb_cockpit:NEXUS_PORT_RNSAPI=4255
 #cb_cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
 #cb_cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
+#cb_cockpit:RNS_CONFIG=/home/bsb/.reticulum/cb_cockpit
+#cb_cockpit:RNS_AUTOSTART=False
+#cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
+#cb_cockpit:NOMADNET_AUTOSTART=False
+#cb_cockpit:DJANGO_LOG_LEVEL=debug
+#cb_cockpit:NGINX_AUTOSTART=True
 #cb_cockpit:NEXUS_ASPECT=cockpit
 #cb_cockpit:NEXUS_ROLE={"cluster":"cockpit"}
 #cb_cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
