--- a/.env_master
+++ b/.env_master
@@ -174,7 +174,7 @@
 #paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #paulchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#paulchen:RNS_AUTOSTART=False
+#paulchen:RNS_AUTOSTART=True
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
 #paulchen:NOMADNET_AUTOSTART=True
 #paulchen:NGINX_AUTOSTART=True
@@ -209,7 +209,7 @@
 #karlchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #karlchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
 #karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
-#karlchen:RNS_AUTOSTART=False
+#karlchen:RNS_AUTOSTART=True
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
 #karlchen:NOMADNET_AUTOSTART=True
 #karlchen:NGINX_AUTOSTART=True
