--- a/nexus_root/.reticulum/karlchen/config
+++ b/nexus_root/.reticulum/karlchen/config
@@ -6,7 +6,7 @@
 
 [logging]
   # Valid log levels are 0 through 7:
-  loglevel = 7
+  loglevel = 5
 
 [interfaces]
 
@@ -34,7 +34,7 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = DD8SB
+    id_callsign = DD8SB-3
     id_interval = 60
     network_name = myTwinCluster
     passphrase = myTwinCluster
@@ -50,7 +50,7 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = DD8SB
+    id_callsign = DD8SB-4
     id_interval = 60
     network_name = myTwinCluster
     passphrase = myTwinCluster
