--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -34,7 +34,7 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = DD8SB
+    id_callsign = DD8SB-1
     id_interval = 60
     network_name = myTwinCluster
     passphrase = myTwinCluster
@@ -50,7 +50,7 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = DD8SB
+    id_callsign = DD8SB-2
     id_interval = 60
     network_name = myTwinCluster
     passphrase = myTwinCluster
