--- a/nexus_root/.nomadnetwork/orangepi/config
+++ b/nexus_root/.nomadnetwork/orangepi/config
@@ -1,7 +1,7 @@
 [logging]
 # Valid log levels are 0 through 7:
   loglevel = 4
-#  destination = file
+  destination = file
 
 [client]
   enable_client = yes
