--- a/.env_master
+++ b/.env_master
@@ -241,7 +241,7 @@
 #orangepi:RNS_CONFIG=/home/bsb/.reticulum/orangepi
 #orangepi:RNS_AUTOSTART=False
 #orangepi:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orangepi
-#orangepi:NOMADNET_AUTOSTART=False
+#orangepi:NOMADNET_AUTOSTART=True
 #orangepi:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #orangepi:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #orangepi:NEXUS_CONTAINER=nexus-orangepi
@@ -321,7 +321,7 @@
 #cb_reticulum:NEXUS_COMPOSE_HOME=~/cb.reticulum
 #cb_reticulum:NEXUS_BACKEND_AUTOSTART=True
 #cb_reticulum:RNS_CONFIG=/home/bsb/.reticulum/cb_reticulum
-#cb_reticulum:RNS_AUTOSTART=True
+#cb_reticulum:RNS_AUTOSTART=False
 #cb_reticulum:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_reticulum
 #cb_reticulum:NOMADNET_AUTOSTART=False
 #cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
@@ -348,7 +348,7 @@
 #cb_home:RNS_CONFIG=/home/bsb/.reticulum/cb_home
 #cb_home:RNS_AUTOSTART=False
 #cb_home:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_home
-#cb_home:NOMADNET_AUTOSTART=False
+#cb_home:NOMADNET_AUTOSTART=True
 #cb_home:NGINX_AUTOSTART=True
 #cb_home:NEXUS_PORT_RNSAPI=4251
 #cb_home:NEXUS_PORT_WEB=127.0.0.1:4381
