LoRa TX Power test

--- a/.env_master
+++ b/.env_master
@@ -176,7 +176,7 @@
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #paulchen:RNS_AUTOSTART=False
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#paulchen:NOMADNET_AUTOSTART=True
+#paulchen:NOMADNET_AUTOSTART=False
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home"}
@@ -211,7 +211,7 @@
 #karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
 #karlchen:RNS_AUTOSTART=False
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#karlchen:NOMADNET_AUTOSTART=True
+#karlchen:NOMADNET_AUTOSTART=False
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
