--- a/.env_master
+++ b/.env_master
@@ -209,9 +209,9 @@
 #karlchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #karlchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
 #karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
-#karlchen:RNS_AUTOSTART=False
+#karlchen:RNS_AUTOSTART=True
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#karlchen:NOMADNET_AUTOSTART=False
+#karlchen:NOMADNET_AUTOSTART=True
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
