--- a/nexus_root/.reticulum/karlchen/config
+++ b/nexus_root/.reticulum/karlchen/config
@@ -1,6 +1,6 @@
 [reticulum]
   enable_transport = Yes
-  share_instance = No
+  share_instance = Yes
   shared_instance_port = 37428
   instance_control_port = 37429
 
