--- a/.env_master
+++ b/.env_master
@@ -174,7 +174,7 @@
 #paulchen:DIREWOLF_DIGIRIG_1_SPEAKER_PLAYBACK_VOLUME=35%
 #paulchen:DIREWOLF_OPTIONS="-t 0 -T %T -d no -q dx -a 20"
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#paulchen:RNS_AUTOSTART=False
+#paulchen:RNS_AUTOSTART=True
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
 #paulchen:NOMADNET_AUTOSTART=False
 #paulchen:NGINX_AUTOSTART=True
