--- a/.env_master
+++ b/.env_master
@@ -183,8 +183,8 @@
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
-#paulchen:#NEXUS_LONGPOLL=60
-#paulchen:#NEXUS_TIMEOUT=70
+#paulchen:NEXUS_LONGPOLL=60
+#paulchen:NEXUS_TIMEOUT=350
 
 # --------------------------------------------------------
 # 'karlchen' karlchen  <home>[home]
@@ -218,8 +218,8 @@
 #karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
-#karlchen:#NEXUS_LONGPOLL=60
-#karlchen:#NEXUS_TIMEOUT=70
+#karlchen:NEXUS_LONGPOLL=60
+#karlchen:NEXUS_TIMEOUT=350
 
 # --------------------------------------------------------
 # 'orangepi' orangepi <home>[home]
