--- a/.env_master
+++ b/.env_master
@@ -183,8 +183,8 @@
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
-#paulchen:NEXUS_LONGPOLL=60
-#paulchen:NEXUS_TIMEOUT=350
+#paulchen:NEXUS_LONGPOLL=300
+#paulchen:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'karlchen' karlchen  <home>[home]
@@ -215,11 +215,11 @@
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
-#karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#karlchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
-#karlchen:NEXUS_LONGPOLL=60
-#karlchen:NEXUS_TIMEOUT=350
+#karlchen:NEXUS_LONGPOLL=14400
+#karlchen:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'orangepi' orangepi <home>[home]
@@ -250,7 +250,7 @@
 #orangepi:NEXUS_ASPECT=home
 #orangepi:NEXUS_ROLE={"cluster":"home"}
 #orangepi:#NEXUS_LONGPOLL=60
-#orangepi:#NEXUS_TIMEOUT=70
+#orangepi:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'radiobox' radiobox <delta>[lora,lora.delta]
@@ -278,7 +278,7 @@
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
-#radiobox:#NEXUS_TIMEOUT=70
+#radiobox:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'radiobox2' radiobox2 <delta>[lora]
@@ -295,7 +295,7 @@
 #radiobox2:NEXUS_ASPECT=delta
 #radiobox2:NEXUS_ROLE={"cluster":"lora"}
 #radiobox2:#NEXUS_LONGPOLL=60
-#radiobox2:#NEXUS_TIMEOUT=70
+#radiobox2:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'radiobox3' radiobox3 <delta>[lora]
@@ -312,7 +312,7 @@
 #radiobox3:NEXUS_ASPECT=delta
 #radiobox3:NEXUS_ROLE={"cluster":"lora"}
 #radiobox3:#NEXUS_LONGPOLL=60
-#radiobox3:#NEXUS_TIMEOUT=70
+#radiobox3:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_reticulum' constant-beta RNS / Nomadnet only
@@ -356,7 +356,7 @@
 #cb_home:NEXUS_ASPECT=home
 #cb_home:NEXUS_ROLE={"cluster":"home"}
 #cb_home:#NEXUS_LONGPOLL=60
-#cb_home:#NEXUS_TIMEOUT=90
+#cb_home:#NEXUS_TIMEOUT=43200
 #cb_home:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
 
 # --------------------------------------------------------
@@ -380,7 +380,7 @@
 #cb_delta:NEXUS_ROLE={"cluster":"delta"}
 #cb_delta:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home"}]
 #cb_delta:#NEXUS_LONGPOLL=60
-#cb_delta:#NEXUS_TIMEOUT=90
+#cb_delta:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_hub' constant-beta <delta>[delta,lora.delta]:[dev]
@@ -406,7 +406,7 @@
 #cb_hub:NEXUS_ROLE={"cluster":"delta","gate":"lora.delta"}
 #cb_hub:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #cb_hub:#NEXUS_LONGPOLL=60
-#cb_hub:#NEXUS_TIMEOUT=90
+#cb_hub:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_dev' constant-beta <dev>[dev]:[delta]:[cockpit]
@@ -429,7 +429,7 @@
 #cb_dev:NEXUS_ROLE={"cluster":"dev"}
 #cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
 #cb_dev:#NEXUS_LONGPOLL=60
-#cb_dev:#NEXUS_TIMEOUT=70
+#cb_dev:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_cockpit' constant-beta <cockpit>[cockpit]:[dev]
@@ -457,5 +457,5 @@
 #cb_cockpit:#WATCHTOWER_POLL_INTERVAL=300
 #cb_cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
 #cb_cockpit:#NEXUS_LONGPOLL=60
-#cb_cockpit:#NEXUS_TIMEOUT=70
+#cb_cockpit:#NEXUS_TIMEOUT=43200
 #cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
