--- a/.env_master
+++ b/.env_master
@@ -176,7 +176,7 @@
 #paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #paulchen:RNS_AUTOSTART=True
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#paulchen:NOMADNET_AUTOSTART=False
+#paulchen:NOMADNET_AUTOSTART=True
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home"}
