--- a/.env_master
+++ b/.env_master
@@ -69,6 +69,7 @@
 #default:# Default nomadnet configuration
 #default:#NOMADNET_CONFIG=/home/bsb/.nomadnetwork
 #default:#NOMADNET_AUTOSTART=False
+#default:NOMADNET_INDEX_SCRIPT=False
 #default:
 #default:#################################################################
 #default:# Default Nginx configuration
@@ -212,6 +213,7 @@
 #karlchen:RNS_AUTOSTART=True
 #karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
 #karlchen:NOMADNET_AUTOSTART=True
+#karlchen:NOMADNET_INDEX_SCRIPT=True
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
 #karlchen:NEXUS_ROLE={"cluster":"home"}
