index.mu as script

--- a/.env_master
+++ b/.env_master
@@ -178,6 +178,7 @@
 #paulchen:RNS_AUTOSTART=True
 #paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
 #paulchen:NOMADNET_AUTOSTART=True
+#paulchen:NOMADNET_INDEX_SCRIPT=True
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
 #paulchen:NEXUS_ROLE={"cluster":"home"}
@@ -244,6 +245,7 @@
 #orangepi:RNS_AUTOSTART=False
 #orangepi:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orangepi
 #orangepi:NOMADNET_AUTOSTART=True
+#orangepi:NOMADNET_INDEX_SCRIPT=True
 #orangepi:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #orangepi:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 #orangepi:NEXUS_CONTAINER=nexus-orangepi
@@ -270,6 +272,7 @@
 #radiobox:RNS_AUTOSTART=False
 #radiobox:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
 #radiobox:NOMADNET_AUTOSTART=False
+#radiobox:NOMADNET_INDEX_SCRIPT=True
 #radiobox:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
 #radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
 #radiobox:NEXUS_CONTAINER=nexus-radiobox
@@ -326,6 +329,7 @@
 #cb_reticulum:RNS_AUTOSTART=False
 #cb_reticulum:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_reticulum
 #cb_reticulum:NOMADNET_AUTOSTART=False
+#cb_reticulum:NOMADNET_INDEX_SCRIPT=True
 #cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_reticulum:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #cb_reticulum:NEXUS_CONTAINER=nexus-reticulum
@@ -351,6 +355,7 @@
 #cb_home:RNS_AUTOSTART=False
 #cb_home:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_home
 #cb_home:NOMADNET_AUTOSTART=True
+#cb_home:NOMADNET_INDEX_SCRIPT=True
 #cb_home:NGINX_AUTOSTART=True
 #cb_home:NEXUS_PORT_RNSAPI=4251
 #cb_home:NEXUS_PORT_WEB=127.0.0.1:4381
@@ -378,6 +383,7 @@
 #cb_delta:RNS_AUTOSTART=False
 #cb_delta:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_delta
 #cb_delta:NOMADNET_AUTOSTART=False
+#cb_delta:NOMADNET_INDEX_SCRIPT=True
 #cb_delta:NEXUS_ASPECT=delta
 #cb_delta:NEXUS_ROLE={"cluster":"delta"}
 #cb_delta:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8241","cluster":"home"}]
@@ -404,6 +410,7 @@
 #cb_hub:RNS_AUTOSTART=False
 #cb_hub:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_hub
 #cb_hub:NOMADNET_AUTOSTART=False
+#cb_hub:NOMADNET_INDEX_SCRIPT=True
 #cb_hub:NEXUS_ASPECT=delta
 #cb_hub:NEXUS_ROLE={"cluster":"delta","gate":"lora.delta"}
 #cb_hub:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
@@ -427,6 +434,7 @@
 #cb_dev:RNS_AUTOSTART=False
 #cb_dev:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_dev
 #cb_dev:NOMADNET_AUTOSTART=False
+#cb_dev:NOMADNET_INDEX_SCRIPT=True
 #cb_dev:NEXUS_ASPECT=dev
 #cb_dev:NEXUS_ROLE={"cluster":"dev"}
 #cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
@@ -450,6 +458,7 @@
 #cb_cockpit:RNS_AUTOSTART=False
 #cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
 #cb_cockpit:NOMADNET_AUTOSTART=False
+#cb_cockpit:NOMADNET_INDEX_SCRIPT=True
 #cb_cockpit:DJANGO_LOG_LEVEL=debug
 #cb_cockpit:NGINX_AUTOSTART=True
 #cb_cockpit:NEXUS_ASPECT=cockpit
