Short poll env settings and index.mu

--- a/.env_master
+++ b/.env_master
@@ -127,6 +127,7 @@
 #default:#NEXUS_ROLE={"cluster":"home"}
 #default:#NEXUS_BRIDGE=[]
 #default:#NEXUS_LONGPOLL=17280
+#default:#NEXUS_SHORTPOLL=10
 #default:#NEXUS_TIMEOUT=43200
 #default:
 #default:##################################################################################################
