Postmaster config and LXMF identity save/reload

--- a/.env_master
+++ b/.env_master
@@ -448,7 +448,7 @@
 # --------------------------------------------------------
 #cb_cockpit:NEXUS_COMPOSE_HOME=~/cb.nexus-cockpit
 #cb_cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
-#cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_cockpit:NEXUS_IMAGE=bsbdock/nexus:dev-postmaster_linux-amd64
 #cb_cockpit:NEXUS_CONTAINER=nexus-cockpit
 #cb_cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #cb_cockpit:NEXUS_NETWORK=nexus-cockpit-net
