--- a/.env_master
+++ b/.env_master
@@ -129,6 +129,7 @@
 #default:#NEXUS_LONGPOLL=17280
 #default:#NEXUS_SHORTPOLL=10
 #default:#NEXUS_TIMEOUT=43200
+#default:#NEXUS_POSTMASTER={"ticks":[0,10,20,30,50,80,130],"poll":1}
 #default:
 #default:##################################################################################################
 #default:# The configuration templates provided here are just examples the need to be adopted to you specific situation.
