--- a/.env_master
+++ b/.env_master
@@ -469,6 +469,7 @@
 #cb_cockpit:#COMPOSE_PROFILES=auto-update
 #cb_cockpit:#WATCHTOWER_POLL_INTERVAL=300
 #cb_cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-#cb_cockpit:#NEXUS_LONGPOLL=60
+#cb_cockpit:NEXUS_SHORTPOLL=10
+#cb_cockpit:NEXUS_LONGPOLL=60
 #cb_cockpit:#NEXUS_TIMEOUT=43200
 #cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
