--- a/.env_master
+++ b/.env_master
@@ -457,7 +457,7 @@
 #cb_cockpit:NEXUS_PORT_WEB=127.0.0.1:4285
 #cb_cockpit:NEXUS_PORT_JSONAPI=127.0.0.1:4345
 #cb_cockpit:RNS_CONFIG=/home/bsb/.reticulum/cb_cockpit
-#cb_cockpit:RNS_AUTOSTART=False
+#cb_cockpit:RNS_AUTOSTART=True
 #cb_cockpit:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_cockpit
 #cb_cockpit:NOMADNET_AUTOSTART=False
 #cb_cockpit:NOMADNET_INDEX_SCRIPT=True
