--- a/.env_master
+++ b/.env_master
@@ -425,7 +425,7 @@
 # --------------------------------------------------------
 #cb_dev:NEXUS_COMPOSE_HOME=~/cb.nexus-dev
 #cb_dev:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
-#cb_dev:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cb_dev:NEXUS_IMAGE=bsbdock/nexus:dev-postmaster_linux-amd64
 #cb_dev:NEXUS_CONTAINER=nexus-dev
 #cb_dev:NEXUS_CONTAINER_ALIAS=nexus-dev
 #cb_dev:NEXUS_NETWORK=nexus-dev-net
