--- a/.env_master
+++ b/.env_master
@@ -439,7 +439,7 @@
 #cb_dev:NOMADNET_INDEX_SCRIPT=True
 #cb_dev:NEXUS_ASPECT=dev
 #cb_dev:NEXUS_ROLE={"cluster":"dev"}
-#cb_dev:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
+#cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
 #cb_dev:#NEXUS_SHORTPOLL=10
 #cb_dev:#NEXUS_LONGPOLL=60
 #cb_dev:#NEXUS_TIMEOUT=43200
@@ -466,7 +466,7 @@
 #cb_cockpit:NGINX_AUTOSTART=True
 #cb_cockpit:NEXUS_ASPECT=cockpit
 #cb_cockpit:NEXUS_ROLE={"cluster":"cockpit"}
-#cb_cockpit:#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cb_cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #cb_cockpit:#COMPOSE_PROFILES=auto-update
 #cb_cockpit:#WATCHTOWER_POLL_INTERVAL=300
 #cb_cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
