--- a/.env_master
+++ b/.env_master
@@ -440,9 +440,9 @@
 #cb_dev:NEXUS_ASPECT=dev
 #cb_dev:NEXUS_ROLE={"cluster":"dev"}
 #cb_dev:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8243","cluster":"delta"},{"url":"https://nexus.deltamatrix.org:8245","cluster":"cockpit"}]
-#cb_dev:#NEXUS_SHORTPOLL=10
-#cb_dev:#NEXUS_LONGPOLL=60
-#cb_dev:#NEXUS_TIMEOUT=43200
+#cb_dev:NEXUS_SHORTPOLL=10
+#cb_dev:NEXUS_LONGPOLL=60
+#cb_dev:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_cockpit' constant-beta <cockpit>[cockpit]:[dev]
@@ -470,7 +470,7 @@
 #cb_cockpit:#COMPOSE_PROFILES=auto-update
 #cb_cockpit:#WATCHTOWER_POLL_INTERVAL=300
 #cb_cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-#cb_cockpit:#NEXUS_SHORTPOLL=10
-#cb_cockpit:#NEXUS_LONGPOLL=60
-#cb_cockpit:#NEXUS_TIMEOUT=200
+#cb_cockpit:NEXUS_SHORTPOLL=10
+#cb_cockpit:NEXUS_LONGPOLL=60
+#cb_cockpit:NEXUS_TIMEOUT=200
 #cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
