New RNS 0.3.9 Testnet Entrypoints

--- a/nexus_root/.reticulum/cb_delta/config
+++ b/nexus_root/.reticulum/cb_delta/config
@@ -10,7 +10,7 @@
 
 [interfaces]
 
-  [[Server Interface]]
+  [[Server Interface Nexus.Delta]]
     type = TCPServerInterface
     interface_enabled = True
     outgoing = True
