--- a/nexus_root/.reticulum/orangepi/config
+++ b/nexus_root/.reticulum/orangepi/config
@@ -10,14 +10,14 @@
 
 [interfaces]
 
-  [[TCP Server Interface]]
+  [[TCP Server Interface Nexus.OrangePI]]
     type = TCPServerInterface
     interface_enabled = True
     outgoing = True
     listen_ip = 0.0.0.0
     listen_port = 4242
 
-  [[TCP Client Interface - Nexus.DeltaMatrix]]
+  [[TCP Client Interface - Nexus.Home]]
     type = TCPClientInterface
     interface_enabled = True
     outgoing = True
