--- a/nexus_root/.reticulum/paulchen/config
+++ b/nexus_root/.reticulum/paulchen/config
@@ -10,7 +10,7 @@
 
 [interfaces]
 
-  [[TCP Server Interface]]
+  [[TCP Server Interface Nexus.Paulchen]]
     type = TCPServerInterface
     interface_enabled = True
     outgoing = True
