--- a/nexus_root/.reticulum/radiobox/config
+++ b/nexus_root/.reticulum/radiobox/config
@@ -10,14 +10,14 @@
 
 [interfaces]
 
-  [[TCP Server Interface]]
+  [[TCP Server Interface Nexus.Radioboc]]
     type = TCPServerInterface
     interface_enabled = True
     outgoing = True
     listen_ip = 0.0.0.0
     listen_port = 4242
 
-  [[TCP Client Interface - Nexus.DeltaMatrix]]
+  [[TCP Client Interface - Nexus.Hub]]
     type = TCPClientInterface
     interface_enabled = True
     outgoing = True
