--- a/bsbdock.nexus_context/.nomadnetwork/config
+++ b/bsbdock.nexus_context/.nomadnetwork/config
@@ -1,6 +1,6 @@
 [logging]
 # Valid log levels are 0 through 7:
-  loglevel = 7
+  loglevel = 4
   destination = file
 
 [client]
@@ -21,6 +21,6 @@
 
 [node]
   enable_node = yes
-  node_name = NX:Paulchen
-  announce_interval = 60
+  node_name = Nexus.Server
+  announce_interval = 360
   announce_at_start = Yes
