--- a/nexus_root/.reticulum/radiobox/config
+++ b/nexus_root/.reticulum/radiobox/config
@@ -10,7 +10,7 @@
 
 [interfaces]
 
-  [[TCP Server Interface Nexus.Radioboc]]
+  [[TCP Server Interface Nexus.Radiobox]]
     type = TCPServerInterface
     interface_enabled = True
     outgoing = True
@@ -24,7 +24,7 @@
     target_host = nexus.deltamatrix.org
     target_port = 4253
 
-  [[RNode LoRa Interface]]
+  [[RNode LoRa Interface 868]]
     type = RNodeInterface
     interface_enabled = True
     outgoing = True
@@ -34,10 +34,10 @@
     txpower = 15
     spreadingfactor = 8
     codingrate = 5
-#    id_callsign = DD8SB-1
-#    id_interval = 600
-    network_name = myLoRaCluster
-    passphrase = myLoraCluster
+    id_callsign = DD8SB-2
+    id_interval = 60
+    network_name = myTwinCluster
+    passphrase = myTwinCluster
     flow_control = False
 
   [[TCP KISS Interface #1]]
