--- a/.env_master
+++ b/.env_master
@@ -183,7 +183,7 @@
 #paulchen:NOMADNET_INDEX_SCRIPT=True
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
-#paulchen:NEXUS_ROLE={"cluster":"home"}
+#paulchen:NEXUS_ROLE={"cluster":"office","gate":"home.office"}
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -219,7 +219,7 @@
 #karlchen:NOMADNET_INDEX_SCRIPT=True
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
-#karlchen:NEXUS_ROLE={"cluster":"home"}
+#karlchen:NEXUS_ROLE={"cluster":"office"}
 #karlchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -254,7 +254,7 @@
 #orangepi:NEXUS_CONTAINER_ALIAS=nexus-orangepi
 #orangepi:NEXUS_NETWORK=nexus-orangepi-net
 #orangepi:NEXUS_ASPECT=home
-#orangepi:NEXUS_ROLE={"cluster":"home"}
+#orangepi:NEXUS_ROLE={"cluster":"office"}
 #orangepi:#NEXUS_LONGPOLL=60
 #orangepi:#NEXUS_TIMEOUT=43200
 
@@ -280,8 +280,8 @@
 #radiobox:NEXUS_CONTAINER=nexus-radiobox
 #radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
 #radiobox:NEXUS_NETWORK=nexus-radiobox-net
-#radiobox:NEXUS_ASPECT=delta
-#radiobox:NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+#radiobox:NEXUS_ASPECT=home
+#radiobox:NEXUS_ROLE={"cluster":"office","gate":"office.home"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
@@ -363,7 +363,7 @@
 #cb_home:NEXUS_PORT_WEB=127.0.0.1:4381
 #cb_home:NEXUS_PORT_JSONAPI=127.0.0.1:4341
 #cb_home:NEXUS_ASPECT=home
-#cb_home:NEXUS_ROLE={"cluster":"home"}
+#cb_home:NEXUS_ROLE={"cluster":"home","gate":"home.office"}
 #cb_home:#NEXUS_LONGPOLL=60
 #cb_home:#NEXUS_TIMEOUT=43200
 #cb_home:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
