--- a/.env_master
+++ b/.env_master
@@ -244,7 +244,7 @@
 #orangepi:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
 #orangepi:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
 #orangepi:RNS_CONFIG=/home/bsb/.reticulum/orangepi
-#orangepi:RNS_AUTOSTART=False
+#orangepi:RNS_AUTOSTART=True
 #orangepi:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orangepi
 #orangepi:NOMADNET_AUTOSTART=True
 #orangepi:NOMADNET_INDEX_SCRIPT=True
@@ -271,9 +271,9 @@
 #radiobox:DIREWOLF_AUTOSTART=False
 #radiobox:DIREWOLF_INSTANCES=CAT_CODEC_1
 #radiobox:RNS_CONFIG=/home/bsb/.reticulum/radiobox
-#radiobox:RNS_AUTOSTART=False
+#radiobox:RNS_AUTOSTART=True
 #radiobox:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
-#radiobox:NOMADNET_AUTOSTART=False
+#radiobox:NOMADNET_AUTOSTART=True
 #radiobox:NOMADNET_INDEX_SCRIPT=True
 #radiobox:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
 #radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
