cb.reticulum config change

--- a/.env_master
+++ b/.env_master
@@ -326,11 +326,11 @@
 # bash nexus_pull.sh cb_reticulum
 # --------------------------------------------------------
 #cb_reticulum:NEXUS_COMPOSE_HOME=~/cb.reticulum
-#cb_reticulum:NEXUS_BACKEND_AUTOSTART=True
+#cb_reticulum:NEXUS_BACKEND_AUTOSTART=False
 #cb_reticulum:RNS_CONFIG=/home/bsb/.reticulum/cb_reticulum
-#cb_reticulum:RNS_AUTOSTART=False
+#cb_reticulum:#RNS_AUTOSTART=False
 #cb_reticulum:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/cb_reticulum
-#cb_reticulum:NOMADNET_AUTOSTART=False
+#cb_reticulum:#NOMADNET_AUTOSTART=False
 #cb_reticulum:NOMADNET_INDEX_SCRIPT=True
 #cb_reticulum:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
 #cb_reticulum:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
@@ -338,8 +338,8 @@
 #cb_reticulum:NEXUS_CONTAINER_ALIAS=nexus-reticulum
 #cb_reticulum:NEXUS_NETWORK=nexus-reticulum-net
 #cb_reticulum:NEXUS_PORT_RNSAPI=4980
-#cb_reticulum:NEXUS_PORT_WEB=127.0.0.1:4880
-#cb_reticulum:NEXUS_PORT_JSONAPI=127.0.0.1:4881
+#cb_reticulum:#NEXUS_PORT_WEB=127.0.0.1:4880
+#cb_reticulum:#NEXUS_PORT_JSONAPI=127.0.0.1:4881
 #cb_reticulum:#NEXUS_COMMAND=rnsd
 #cb_reticulum:NEXUS_COMMAND=nomadnet_daemon
 
