--- a/.env_master
+++ b/.env_master
@@ -19,6 +19,7 @@
 # docker exec -it nexus-server_node01 python3 /bsb/nexus_server/nexus_server.py
 # python3 ~/nexus/bsbdock.nexus_context/nexus_server/nexus_server.py
 # python3 ./bsbdock.nexus_context/nexus_server/nexus_server.py --aspect=delta --role={\"cluster\":\"lora\"} --timeout=90 --longpoll=60
+# docker exec -it nexus-sever entrypoint.sh nomadnet
 
 #default:#################################################################
 #default:# Default values used within the Nexus Container
