termux config change

--- a/.env_master
+++ b/.env_master
@@ -475,3 +475,35 @@
 #cb_cockpit:NEXUS_LONGPOLL=60
 #cb_cockpit:NEXUS_TIMEOUT=200
 #cb_cockpit:#NEXUS_COMMAND=start_nexus.sh
+
+# --------------------------------------------------------
+# 'termux' termux <home>[home]
+# bash nexus_pull.sh orangepi
+# --------------------------------------------------------
+#termux:COMPOSE_PROFILES=auto-update
+#termux:WATCHTOWER_POLL_INTERVAL=86400
+#termux:NEXUS_WATCHTOWER=nexus-watchtower
+#termux:NGINX_AUTOSTART=True
+#termux:NEXUS_COMPOSE_HOME=~/nexus
+#termux:DIREWOLF_CONFIG=/home/bsb/.direwolf/termux
+#termux:DIREWOLF_AUTOSTART=False
+#termux:DIREWOLF_INSTANCES=VOX_Alpha_1
+#termux:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
+#termux:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
+#termux:#DIREWOLF_INSTANCES=VOX_Charlie_1
+#termux:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
+#termux:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+#termux:RNS_CONFIG=/home/bsb/.reticulum/termux
+#termux:RNS_AUTOSTART=True
+#termux:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/termux
+#termux:NOMADNET_AUTOSTART=True
+#termux:NOMADNET_INDEX_SCRIPT=True
+#termux:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#termux:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#termux:NEXUS_CONTAINER=nexus-termux
+#termux:NEXUS_CONTAINER_ALIAS=nexus-termux
+#termux:NEXUS_NETWORK=nexus-termux-net
+#termux:NEXUS_ASPECT=home
+#termux:NEXUS_ROLE={"cluster":"office"}
+#termux:#NEXUS_LONGPOLL=60
+#termux:#NEXUS_TIMEOUT=43200
