dynamic master - master assesment

--- a/.env_master
+++ b/.env_master
@@ -468,6 +468,7 @@
 #cb_cockpit:NEXUS_ASPECT=cockpit
 #cb_cockpit:NEXUS_ROLE={"cluster":"cockpit"}
 #cb_cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cb_cockpit:NEXUS_DYNAMIC_MASTER=True
 #cb_cockpit:#COMPOSE_PROFILES=auto-update
 #cb_cockpit:#WATCHTOWER_POLL_INTERVAL=300
 #cb_cockpit:#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
