--- a/.env_master
+++ b/.env_master
@@ -156,7 +156,7 @@
 #default:# the docker compose file 'docker-compose.yml' and the master template file '.env_master'
 
 # --------------------------------------------------------
-# 'paulchen' paulchen  <home>[home]
+# 'paulchen' paulchen  <home>[home, delta.home]:[]
 # bash nexus_pull.sh paulchen
 # --------------------------------------------------------
 #paulchen:COMPOSE_PROFILES=auto-update
@@ -184,7 +184,7 @@
 #paulchen:NOMADNET_INDEX_SCRIPT=True
 #paulchen:NGINX_AUTOSTART=True
 #paulchen:NEXUS_ASPECT=home
-#paulchen:NEXUS_ROLE={"cluster":"office","gate":"home.office"}
+#paulchen:NEXUS_ROLE={"cluster":"home","gate":"delta.home"}
 #paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #paulchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #paulchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -192,7 +192,7 @@
 #paulchen:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
-# 'karlchen' karlchen  <home>[home]
+# 'karlchen' karlchen  <home>[home]:[]
 # bash nexus_pull.sh karlchen
 # --------------------------------------------------------
 #karlchen:COMPOSE_PROFILES=auto-update
@@ -220,7 +220,7 @@
 #karlchen:NOMADNET_INDEX_SCRIPT=True
 #karlchen:NGINX_AUTOSTART=True
 #karlchen:NEXUS_ASPECT=home
-#karlchen:NEXUS_ROLE={"cluster":"office"}
+#karlchen:NEXUS_ROLE={"cluster":"home"}
 #karlchen:#NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #karlchen:NEXUS_RNODE_DEVICE2=/dev/ttyUSB0
 #karlchen:#NEXUS_CAT_DEVICE=/dev/ttyUSB0
@@ -228,7 +228,7 @@
 #karlchen:NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
-# 'orangepi' orangepi <home>[home]
+# 'orangepi' orangepi <home>[home]:[]
 # bash nexus_pull.sh orangepi
 # --------------------------------------------------------
 #orangepi:COMPOSE_PROFILES=auto-update
@@ -255,12 +255,12 @@
 #orangepi:NEXUS_CONTAINER_ALIAS=nexus-orangepi
 #orangepi:NEXUS_NETWORK=nexus-orangepi-net
 #orangepi:NEXUS_ASPECT=home
-#orangepi:NEXUS_ROLE={"cluster":"office"}
+#orangepi:NEXUS_ROLE={"cluster":"home"}
 #orangepi:#NEXUS_LONGPOLL=60
 #orangepi:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
-# 'radiobox' radiobox <delta>[lora,lora.delta]
+# 'radiobox' radiobox <delta>[delta, delta.home]:[]
 # bash nexus_pull.sh radiobox
 # --------------------------------------------------------
 #radiobox:COMPOSE_PROFILES=auto-update
@@ -282,45 +282,11 @@
 #radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
 #radiobox:NEXUS_NETWORK=nexus-radiobox-net
 #radiobox:NEXUS_ASPECT=home
-#radiobox:NEXUS_ROLE={"cluster":"office","gate":"office.home"}
+#radiobox:NEXUS_ROLE={"cluster":"delta","gate":"delta.home"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
 #radiobox:#NEXUS_TIMEOUT=43200
-
-# --------------------------------------------------------
-# 'radiobox2' radiobox2 <delta>[lora]
-# bash nexus_pull.sh radiobox2
-# --------------------------------------------------------
-#radiobox2:NEXUS_COMPOSE_HOME=~/nexus
-#radiobox2:DIREWOLF_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.direwolf/radiobox2
-#radiobox2:DIREWOLF_AUTOSTART=False
-#radiobox2:DIREWOLF_INSTANCES=VOX_Alpha_1
-#radiobox2:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/radiobox2
-#radiobox2:RNS_AUTOSTART=False
-#radiobox2:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/radiobox2
-#radiobox2:NOMADNET_AUTOSTART=False
-#radiobox2:NEXUS_ASPECT=delta
-#radiobox2:NEXUS_ROLE={"cluster":"lora"}
-#radiobox2:#NEXUS_LONGPOLL=60
-#radiobox2:#NEXUS_TIMEOUT=43200
-
-# --------------------------------------------------------
-# 'radiobox3' radiobox3 <delta>[lora]
-# bash nexus_pull.sh radiobox3
-# --------------------------------------------------------
-#radiobox3:NEXUS_COMPOSE_HOME=~/nexus
-#radiobox3:DIREWOLF_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.direwolf/radiobox3
-#radiobox3:DIREWOLF_AUTOSTART=False
-#radiobox3:DIREWOLF_INSTANCES=VOX_Alpha_1
-#radiobox3:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/radiobox3
-#radiobox3:RNS_AUTOSTART=False
-#radiobox3:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/radiobox3
-#radiobox3:NOMADNET_AUTOSTART=False
-#radiobox3:NEXUS_ASPECT=delta
-#radiobox3:NEXUS_ROLE={"cluster":"lora"}
-#radiobox3:#NEXUS_LONGPOLL=60
-#radiobox3:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
 # 'cb_reticulum' constant-beta RNS / Nomadnet only
@@ -364,7 +330,7 @@
 #cb_home:NEXUS_PORT_WEB=127.0.0.1:4381
 #cb_home:NEXUS_PORT_JSONAPI=127.0.0.1:4341
 #cb_home:NEXUS_ASPECT=home
-#cb_home:NEXUS_ROLE={"cluster":"home","gate":"home.office"}
+#cb_home:NEXUS_ROLE={"cluster":"home"}
 #cb_home:#NEXUS_LONGPOLL=60
 #cb_home:#NEXUS_TIMEOUT=43200
 #cb_home:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8242","cluster":"delta"}]
@@ -394,7 +360,7 @@
 #cb_delta:#NEXUS_TIMEOUT=43200
 
 # --------------------------------------------------------
-# 'cb_hub' constant-beta <delta>[delta,lora.delta]:[dev]
+# 'cb_hub' constant-beta <delta>[delta]:[dev]
 # bash nexus_pull.sh cb_hub
 # --------------------------------------------------------
 #cb_hub:COMPOSE_PROFILES=auto-update
@@ -505,6 +471,6 @@
 #termux:NEXUS_CONTAINER_ALIAS=nexus-termux
 #termux:NEXUS_NETWORK=nexus-termux-net
 #termux:NEXUS_ASPECT=home
-#termux:NEXUS_ROLE={"cluster":"office"}
+#termux:NEXUS_ROLE={"cluster":"home"}
 #termux:#NEXUS_LONGPOLL=60
 #termux:#NEXUS_TIMEOUT=43200
